--- a/infrastructure-template.yaml
+++ b/infrastructure-template.yaml
@@ -758,18 +758,26 @@ Resources:
       DeploymentGroupName: !Sub '${ProjectName}-${Environment}-deployment-group'
       ServiceRoleArn: !GetAtt CodeDeployServiceRole.Arn
       DeploymentConfigName: CodeDeployDefault.ECSAllAtOnce
-      EcsServices:
-        - ServiceName: !Ref ECSService
+      BlueGreenDeploymentConfiguration:
+        TerminateBlueInstancesOnDeploymentSuccess:
+          Action: TERMINATE
+          TerminationWaitTimeInMinutes: 1
+        DeploymentReadyOption:
+          ActionOnTimeout: CONTINUE_DEPLOYMENT
+        GreenFleetProvisioningOption:
+          Action: COPY_AUTO_SCALING_GROUP
+      ECSServices:
+        - ServiceName: !GetAtt ECSService.Name
           ClusterName: !Ref ECSCluster
       LoadBalancerInfo:
-        TargetGroupPairInfoList:
-          - TargetGroups:
-              - Name: !Ref ECSTargetGroupBlue
-              - Name: !Ref ECSTargetGroupGreen
-            ProdTrafficRoute:
-              ListenerArns:
-                - !Ref HTTPListener
-
+        TargetGroupInfoList:
+          - Name: !GetAtt ECSTargetGroupBlue.TargetGroupName
+          - Name: !GetAtt ECSTargetGroupGreen.TargetGroupName
+      AutoRollbackConfiguration:
+        Enabled: true
+        Events:
+          - DEPLOYMENT_FAILURE
+          - DEPLOYMENT_STOP_ON_ALARM
 
   # CodeBuild Project
   CodeBuildProject:
@@ -943,3 +951,15 @@ Outputs:
 
   PipelineName:
     Value: !Ref CodePipeline
+
+  ECRRepositoryURI:
+    Description: 'ECR Repository URI'
+    Value: !Sub '${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${ECRRepository}'
+    Export:
+      Name: !Sub '${ProjectName}-${Environment}-ECR-URI'
+
+  GitHubActionsRoleArn:
+    Description: 'GitHub Actions Role ARN for OIDC'
+    Value: !GetAtt GitHubActionsRole.Arn
+    Export:
+      Name: !Sub '${ProjectName}-${Environment}-GitHub-Actions-Role-ARN'
